[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "python_canvas_layer"
version = "0.0.3"
authors = [
  { name="Zack Ives", email="zives@cis.upenn.edu" },
]
description = "A lightweight Python layer over the Canvas LMS API"
dependencies = [
    "requests",
    "html5lib",
    "beautifulsoup4",
    "canvasapi",
    "pandas",
    "pytz",
    "pyyaml"
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/upenn/python_canvas"
Issues = "https://github.com/upenn/python_canvas/issues"